--- a/website/index.html
+++ b/website/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
-    <script src="script.js"> </script>
+    <script src="script.js"></script>
 </head>
 <body>
+    <div class = " container mt-5 mb-5 d-flex justify-content-center ">
+        <table class="table">
+            <tbody></tbody>
+            <thead></thead>
+        </table>
+    </div>
     
 </body>
 </html>
