added ui for website

--- a/website/index.html
+++ b/website/index.html
@@ -8,12 +8,18 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div class = " container mt-5 mb-5 d-flex justify-content-center ">
-        <table class="table">
-            <tbody></tbody>
-            <thead></thead>
-        </table>
+    <div class="up">
+        <u>Green Engineering</u>
     </div>
-    
+    <table class="table">
+        <tbody></tbody>
+        <thead></thead>
+    </table>   
+    <div class="tree1">
+        <img src="templates/tree.png" alt="tree" width="475" height="600">
+    </div>
+    <div class="tree2">
+        <img src="templates/tree.png" alt="tree" width="475" height="600">
+    </div>
 </body>
 </html>
